syntax="proto3";
package register;

option go_package = "github.com/adityagesh/numerique-store/customers/register";
message RegisterRequest {
    string user_name = 10;
    string first_name = 1;
    string last_name = 2;
    string addr_line1 = 3;
    string addr_line2 = 4;
    string city = 6;
    string state = 7;
    string country = 8;
    string phone = 9;
    string email = 11;
    int32 pincode = 5;

}

message RegisterResponse {
    string message = 1;
    int64 id = 3;
    Error error = 2;
}

message Error {
    string message = 2;
    string code = 1;
}

service registerService {
    rpc RegisterCustomer (RegisterRequest) returns (RegisterResponse);
}